Orbiting around a particular dense mesh in edit mode is extremely slow #106993

Closed
opened 2023-04-15 22:21:03 +02:00 by John-Keyberg · 0 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b

Short description of error
[Orbiting around a particular dense mesh in edit mode is extremely slow if Orbit Around Selection is set to true in Preferences > Navigation, and a large ammount of polygons is selected. This only occurs for this one particular mesh, and not others of similar or greater polycount. Notice that the issue also doesn't occur for zooming or panning, only orbiting exclusively. I:ve tried voxel remeshing and quad remeshing the object, but the issue persists, which indicates that it might not be about the topology. Graphics drivers have been updated.]

Exact steps for others to reproduce the error
[This is a simplified file with only two objects. A dense sphere and a dense mouth. The issue only happens on the mouth, but not the sphere.]

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` **Short description of error** [Orbiting around a particular dense mesh in edit mode is extremely slow if Orbit Around Selection is set to true in Preferences > Navigation, and a large ammount of polygons is selected. This only occurs for this one particular mesh, and not others of similar or greater polycount. Notice that the issue also doesn't occur for zooming or panning, only orbiting exclusively. I:ve tried voxel remeshing and quad remeshing the object, but the issue persists, which indicates that it might not be about the topology. Graphics drivers have been updated.] **Exact steps for others to reproduce the error** [This is a simplified file with only two objects. A dense sphere and a dense mouth. The issue only happens on the mouth, but not the sphere.]
John-Keyberg added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-04-15 22:21:04 +02:00
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-20 20:58:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-21 20:07:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106993
No description provided.