source/blender/editors/space_view3d/view3d_navigate.cc
@@ -304,7 +304,7 @@ bool view3d_orbit_calc_center(bContext *C, float r_dyn_ofs[3])
   }
   else {
     /* If there's no selection, `lastofs` is unmodified and last value since static. */
-    is_set = calculateTransformCenter(C, V3D_AROUND_CENTER_MEDIAN, lastofs, nullptr);
+    is_set = ED_transform_calc_pivot_pos(C, V3D_AROUND_CENTER_MEDIAN, lastofs);
   }
 
   copy_v3_v3(r_dyn_ofs, lastofs);
